# FdogLog

./: FdogLog.h  README.md  REDAME.md  fdoglogconf.conf  fdoglogger.cpp  fdoglogger.h  fdoglogger_test.cpp
conf/: fdoglogconf.conf
example/: CMakeLists.txt  test.cpp
linux/: CMakeLists.txt
linux/conf/: fdoglogconf.conf
linux/example/: CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
linux/src/: CMakeLists.txt
linux/src/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
linux/src/lib/include/: fdoglogger.h
linux/src/lib/src/: filemanagement.cpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/include/: fdoglogger.h  filemanagement.h
src/lib/src/: fdoglogger.cpp  filemanagement.cpp
windows/: fdoglogger.cpp  fdoglogger.h  filemanagement.h
