cmake_minimum_required(VERSION 3.5)

ADD_DEFINITIONS(-std=c++11)

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/example MAIN_SRC)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/lib/include")
LINK_DIRECTORIES("${PROJECT_BINARY_DIR}/lib")

ADD_EXECUTABLE(main ${MAIN_SRC})

TARGET_LINK_LIBRARIES(main libfdoglog.so)

TARGET_LINK_LIBRARIES(main libfdoglog.a)