CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

ADD_DEFINITIONS(-std=c++11)

SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/lib/src SRC)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/lib/include")

ADD_LIBRARY(fdoglog SHARED ${SRC})

ADD_LIBRARY(fdoglog_static STATIC ${SRC})

set_target_properties(fdoglog_static PROPERTIES OUTPUT_NAME "fdoglog")
